Compteur de parties non finies

--- a/front/index.html
+++ b/front/index.html
@@ -14,6 +14,10 @@
     </header>
     <div id="game-zone" class="elevation-1">
       <h2 id="game-zone-title" class="elevation-2">Liste des parties</h2>
+      <game-not-finished-count-component
+        id="game-not-finished-count"
+        count="0"
+      ></game-not-finished-count-component>
       <div id="div-add-game">
         <form id="form-add-game">
           <label for="input-add-game">Ajouter un match :</label>
