--- a/front/index.html
+++ b/front/index.html
@@ -30,10 +30,15 @@
             type="text"
             placeholder="Nouvelle partie ..."
           />
-          <button id="btn-add-game">Ajouter</button>
+          <button id="btn-add-game" class="btn-game primary">Ajouter</button>
         </form>
       </div>
       <ul id="game-list"></ul>
+      <div id="div-game-next-elements">
+        <button id="btn-game-next-elements" class="btn-game primary">
+          Suivants
+        </button>
+      </div>
     </div>
 
     <template id="template-game-element-line">
